@@ -1,2 +1,3 @@
 import mr.developer.svn
 import mr.developer.git
+import mr.developer.mercurial
